fix: add SHA256 digest to images.txt for build-info
DOCKER BUILD-INFO FIX:
✅ Extract image digest using docker inspect
✅ Format images.txt as: image:tag@sha256:digest
✅ Matches inventory service pattern exactly
✅ Fixes: 'unexpected file format images.txt'

SUCCESS: Docker push working perfectly!
- Image pushed: apptrustswampupc.jfrog.io/.../recommendations:1.0.164
- SHA256: 1150d8bf725c621a2d19ebe5cb0057b1fb1f87f00b8f3bb1a8fed9ee280db908

--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -407,8 +407,18 @@ jobs:
             REPO_KEY="${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local"
             echo "🔗 Adding docker image to build-info: image=$IMAGE_NAME repo=$REPO_KEY"
             
-            # Create images.txt file for build-info
-            echo "$IMAGE_NAME" > images.txt
+            # Resolve pushed image digest and write in required format: image:tag@sha256:...
+            DIGEST=$(docker inspect "$IMAGE_NAME" --format='{{index .RepoDigests 0}}' 2>/dev/null | awk -F@ '{print $2}')
+            if [[ -z "$DIGEST" || "$DIGEST" == "<no value>" ]]; then
+              docker pull "$IMAGE_NAME" >/dev/null 2>&1 || true
+              DIGEST=$(docker inspect "$IMAGE_NAME" --format='{{index .RepoDigests 0}}' 2>/dev/null | awk -F@ '{print $2}')
+            fi
+            if [[ -z "$DIGEST" || "$DIGEST" == "<no value>" ]]; then
+              echo "❌ Could not resolve image digest for $IMAGE_NAME" >&2; exit 1
+            fi
+            echo "${IMAGE_NAME%@*}@${DIGEST}" > images.txt
+            echo "📝 Created images.txt with digest: ${IMAGE_NAME%@*}@${DIGEST}"
+            
             jf rt build-docker-create "$REPO_KEY" \
               --image-file images.txt \
               --build-name "${{ steps.build-vars.outputs.build-name }}" \
