fix: completely disable legacy CI workflow (prevent duplicate runs)
WORKFLOW DUPLICATION FIX:
✅ Commented out entire 'on:' section including workflow_dispatch
✅ Legacy ci.yml now completely inactive
✅ Only ci-shared.yml will run on commits

BEFORE: 2 workflows triggered per commit
AFTER: Only 1 workflow (ci-shared.yml) will run

This prevents the duplicate workflow runs that were causing confusion.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,17 @@ name: CI (Legacy - DISABLED)
 #   pull_request:
 #     branches: [main]
 #   workflow_dispatch:
-    inputs:
-      reason:
-        description: 'Reason for manual CI trigger'
-        required: false
-        default: 'Manual testing'
-        type: string
-      force_app_version:
-        description: 'Force application version creation (override commit filter)'
-        required: false
-        default: false
-        type: boolean
+#     inputs:
+#       reason:
+#         description: 'Reason for manual CI trigger'
+#         required: false
+#         default: 'Manual testing'
+#         type: string
+#       force_app_version:
+#         description: 'Force application version creation (override commit filter)'
+#         required: false
+#         default: false
+#         type: boolean
 
 jobs:
   analyze-commit:
