fix: correct JFrog CLI command from 'jf app' to 'jf ap'
APPTRUST COMMAND FIX:
✅ Fixed 'jf app create-version' to 'jf ap create-version'
✅ Added comment explaining the correction
✅ Resolves workflow failure: 'jf app' is not a jf command

CRITICAL CORRECTION:
The correct JFrog CLI command for AppTrust operations is 'jf ap',
not 'jf app'. This is a common mistake that causes workflow failures.

This fix ensures AppTrust application version creation works correctly
in the CI/CD pipeline.

--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -457,8 +457,8 @@ jobs:
         run: |
           echo "🛡️ Creating AppTrust application version"
           
-          # Create application version with build binding
-          jf app create-version \
+          # Create application version with build binding (FIXED: jf ap not jf app)
+          jf ap create-version \
             --app-key="${{ vars.PROJECT_KEY }}-${{ inputs.service-name }}" \
             --version="${{ steps.semver.outputs.version }}" \
             --build-name="${{ steps.build-vars.outputs.build-name }}" \
