--- a/.github/workflows/ci-shared.yml
+++ b/.github/workflows/ci-shared.yml
@@ -68,7 +68,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    uses: ./.github/workflows/shared-build.yml
+    uses: ./.github/workflows/build.yml
     with:
       service-name: "recommendations"
       python-version: "3.11"
