fix: resolve YAML syntax error by converting multi-line Python to single line
YAML SYNTAX FIX: Converted multi-line Python code to single line
- Issue: Multi-line Python code block was breaking YAML parsing on line 246
- Fix: Converted to single-line Python command with proper error handling
- Location: Coverage percentage calculation in test step
- Functionality: Identical behavior, just different formatting

The Python code now uses semicolons to separate statements on one line,
which is valid YAML and maintains the same coverage calculation logic.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,16 +242,7 @@ jobs:
           
           # Calculate actual coverage percentage
           if [ -f "coverage.xml" ]; then
-            COVERAGE_PERCENT=$(python -c "
-import xml.etree.ElementTree as ET
-try:
-    tree = ET.parse('coverage.xml')
-    root = tree.getroot()
-    line_rate = root.get('line-rate', '0.85')
-    print(f'{float(line_rate) * 100:.1f}')
-except:
-    print('85.0')
-            ")
+            COVERAGE_PERCENT=$(python -c "import xml.etree.ElementTree as ET; tree = ET.parse('coverage.xml'); root = tree.getroot(); line_rate = root.get('line-rate', '0.85'); print(f'{float(line_rate) * 100:.1f}')" 2>/dev/null || echo "85.0")
           else
             COVERAGE_PERCENT="85.0"
           fi
