feat: consolidate analyze-commit.sh to shared bookverse-devops script
SHARED COMPONENT CONSOLIDATION: Eliminate duplicate commit analysis logic
✅ Removes local analyze-commit.sh (134 lines of duplicate code)
✅ Uses shared script from bookverse-devops/scripts/analyze-commit.sh
✅ Maintains identical functionality and outputs

BENEFITS ACHIEVED:
- Eliminated 134 lines of duplicate code from this service
- Centralized maintenance for commit analysis logic
- Consistent CI/CD decisions across all BookVerse services
- Single source of truth for commit analysis rules

WORKFLOW CHANGES:
- Updated analyze-commit job to use shared script path
- Added logging for shared script usage
- Removed local duplicate script file

This is part of the broader shared component consolidation effort
to eliminate 400+ lines of duplicate code across services.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,11 @@ jobs:
           echo "🏭 Production note: Real systems would use conservative defaults"
           echo ""
           
-          # Use our commit analysis script
-          chmod +x ./scripts/analyze-commit.sh
-          ./scripts/analyze-commit.sh
+          # Use shared bookverse-devops commit analysis script
+          echo "🔗 Using shared commit analysis script from bookverse-devops"
+          chmod +x ../bookverse-demo-init/bookverse-devops/scripts/analyze-commit.sh
+          ../bookverse-demo-init/bookverse-devops/scripts/analyze-commit.sh
+          echo "✅ Commit analysis completed using shared script"
 
   build-test-publish:
     name: "Build & Test (Always Runs)"
